user name added

--- a/application.properties
+++ b/application.properties
@@ -6,5 +6,7 @@ dp properties are maintained
 
 in this file
 but i want last properties
+some of properties are::
 
-thsnk you.
+thank you.
+by mahmed
