db things added

--- a/application.properties
+++ b/application.properties
@@ -7,6 +7,8 @@ dp properties are maintained
 in this file
 but i want last properties
 some of properties are::
+dbCapacity=20GB
+dbname=mysql
 
 thank you.
 by mahmed
